# email-triage

./: .dockerignore  .gitignore  COMPLETION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.sh  Dockerfile  EVALUATOR_NOTES.md  README.md  RUNTIME_VALIDATION.md  SUBMISSION_CHECKLIST.md  VERIFICATION.md  app.py  environment.py  evaluator_test_example.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rewards.py  tasks.py  test_deployment.sh
data/: __init__.py  emails.py
server/: app.py
tests/: test_env.py
